--- a/index/landing.html
+++ b/index/landing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>D.A.P</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\coadh\Desktop\H2KF\style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
