--- a/index/search.html
+++ b/index/search.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>D.A.P</title>
-    <link rel="stylesheet" type="text/css" href="C:\Users\coadh\Desktop\H2KF\style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
     <div id="title"><div onclick="location.href='landing.html'">D.A.P</div></div>
