--- a/index/search.html
+++ b/index/search.html
@@ -10,13 +10,14 @@
 <div id = "address">
     <input placeholder="입력 주소">
 </div>
-<form id = "search">
-    <div id = "all" onclick="location.href='search.html'">전체보기</div>
-    <div id = "hiphop" onclick="location.href='search.html'">힙합댄스</div>
-    <div id = "locking" onclick="location.href='search.html'">락킹</div>
-    <div id = "b_boing" onclick="location.href='search.html'">비보잉</div>
-    <div id = "freestyle" onclick="location.href='search.html'">프리스타일</div>
-    <div id = "house" onclick="location.href='search.html'">하우스</div>
+<form id="search">
+    <div id="all" onclick="location.href='search.html'">전체보기</div>
+    <div id="hiphop" onclick="location.href='search.html'">힙합댄스</div>
+    <div id="locking" onclick="location.href='search.html'">락킹</div>
+    <div id="b_boing" onclick="location.href='search.html'">비보잉</div>
+    <div id="freestyle" onclick="location.href='search.html'">프리스타일</div>
+    <div id="house" onclick="location.href='search.html'">하우스</div>
+    <div id="k_pop" onclick="location.href='search.html'">K-POP</div>
 </form>
 <div id="last">일단 모르겠고 약관임</div>
 
