--- a/index/landing.html
+++ b/index/landing.html
@@ -20,7 +20,7 @@
             <div id="landing_b_boing" onclick="location.href='search.html'">비보잉</div>
             <div id="landing_freestyle" onclick="location.href='search.html'">프리스타일</div>
             <div id="landing_house" onclick="location.href='search.html'">하우스</div>
-            <div id="k_pop" onclick="location.href='search.html'">K-POP</div>
+            <div id="landing_k_pop" onclick="location.href='search.html'">K-POP</div>
         </div>
 
     </form>
