Docs: janre change

--- a/index/landing.html
+++ b/index/landing.html
@@ -8,19 +8,26 @@
 </head>
 
 <body>
-    <div id="title"><div onclick="location.href='landing.html'">D.A.P</div></div>
+    <div id="title">
+        <div onclick="location.href='landing.html'">D.A.P</div>
+    </div>
     <div id="address">
         <input placeholder="입력 주소" style="width:380px;height:50px;font-size:30px;">
     </div>
     <form id="landing_search">
         <div id="landing_form">
             <div id="landing_all" onclick="location.href='search.html'">전체보기</div>
-            <div id="landing_hiphop" onclick="location.href='search.html'">힙합댄스</div>
+            <div id="landing_hiphop" onclick="location.href='search.html'">힙합</div>
             <div id="landing_locking" onclick="location.href='search.html'">락킹</div>
-            <div id="landing_b_boing" onclick="location.href='search.html'">비보잉</div>
-            <div id="landing_freestyle" onclick="location.href='search.html'">프리스타일</div>
+            <div id="landing_popping" onclick="location.href='search.html'">팝핀</div>
+            <div id="landing_wagking" onclick="location.href='search.html'">왁킹</div>
+            <div id="landing_Crump" onclick="location.href='search.html'">크럼프</div>
+            <div id="landing_urban" onclick="location.href='search.html'">얼반</div>
+            <div id="landing_voguing" onclick="location.href='search.html'">보깅</div>
             <div id="landing_house" onclick="location.href='search.html'">하우스</div>
-            <div id="landing_k_pop" onclick="location.href='search.html'">K-POP</div>
+            <div id="landing_k_pop" onclick="location.href='search.html'">K-POP=</div>
+            <div id="landing_girlish" onclick="location.href='search.html'">걸리쉬</div>
+            <div id="landing_tutting" onclick="location.href='search.html'">텃팅</div>
         </div>
 
     </form>
