--- a/index/search.html
+++ b/index/search.html
@@ -1,25 +1,35 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <title>D.A.P</title>
     <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
+
 <body>
-    <div id="title"><div onclick="location.href='landing.html'">D.A.P</div></div>
-<div id = "address">
-    <input placeholder="입력 주소">
-</div>
-<form id="search">
-    <div id="all" onclick="location.href='search.html'">전체보기</div>
-    <div id="hiphop" onclick="location.href='search.html'">힙합댄스</div>
-    <div id="locking" onclick="location.href='search.html'">락킹</div>
-    <div id="b_boing" onclick="location.href='search.html'">비보잉</div>
-    <div id="freestyle" onclick="location.href='search.html'">프리스타일</div>
-    <div id="house" onclick="location.href='search.html'">하우스</div>
-    <div id="k_pop" onclick="location.href='search.html'">K-POP</div>
-</form>
-<div id="last">일단 모르겠고 약관임</div>
+    <div id="title">
+        <div onclick="location.href='landing.html'">D.A.P</div>
+    </div>
+    <div id="address">
+        <input placeholder="입력 주소">
+    </div>
+    <form id="search">
+        <div id="all" onclick="location.href='search.html'">전체보기</div>
+        <div id="hiphop" onclick="location.href='search.html'">힙합</div>
+        <div id="locking" onclick="location.href='search.html'">락킹</div>
+        <div id="popping" onclick="location.href='search.html'">팝핀</div>
+        <div id="wagking" onclick="location.href='search.html'">왁킹</div>
+        <div id="Crump" onclick="location.href='search.html'">크럼프</div>
+        <div id="urban" onclick="location.href='search.html'">얼반</div>
+        <div id="oguing" onclick="location.href='search.html'">보깅</div>
+        <div id="house" onclick="location.href='search.html'">하우스</div>
+        <div id="k_pop" onclick="location.href='search.html'">K-POP=</div>
+        <div id="girlish" onclick="location.href='search.html'">걸리쉬</div>
+        <div id="tutting" onclick="location.href='search.html'">텃팅</div>
+    </form>
+    <div id="last">일단 모르겠고 약관임</div>
 
 </body>
+
 </html>
