Docs : class make janre

--- a/index/search.html
+++ b/index/search.html
@@ -15,18 +15,18 @@
         <input placeholder="입력 주소">
     </div>
     <form id="search">
-        <div id="all" onclick="location.href='search.html'">전체보기</div>
-        <div id="hiphop" onclick="location.href='search.html'">힙합</div>
-        <div id="locking" onclick="location.href='search.html'">락킹</div>
-        <div id="popping" onclick="location.href='search.html'">팝핀</div>
-        <div id="wagking" onclick="location.href='search.html'">왁킹</div>
-        <div id="Crump" onclick="location.href='search.html'">크럼프</div>
-        <div id="urban" onclick="location.href='search.html'">얼반</div>
-        <div id="oguing" onclick="location.href='search.html'">보깅</div>
-        <div id="house" onclick="location.href='search.html'">하우스</div>
-        <div id="k_pop" onclick="location.href='search.html'">K-POP=</div>
-        <div id="girlish" onclick="location.href='search.html'">걸리쉬</div>
-        <div id="tutting" onclick="location.href='search.html'">텃팅</div>
+        <div id="all" class="search_janre" onclick="location.href='search.html'">전체보기</div>
+        <div id="hiphop" class="search_janre" onclick="location.href='search.html'">힙합</div>
+        <div id="locking" class="search_janre" onclick="location.href='search.html'">락킹</div>
+        <div id="popping" class="search_janre" onclick="location.href='search.html'">팝핀</div>
+        <div id="wagking" class="search_janre" onclick="location.href='search.html'">왁킹</div>
+        <div id="Crump" class="search_janre" onclick="location.href='search.html'">크럼프</div>
+        <div id="urban" class="search_janre" onclick="location.href='search.html'">얼반</div>
+        <div id="oguing" class="search_janre" onclick="location.href='search.html'">보깅</div>
+        <div id="house" class="search_janre" onclick="location.href='search.html'">하우스</div>
+        <div id="k_pop" class="search_janre" onclick="location.href='search.html'">K-POP</div>
+        <div id="girlish" class="search_janre" onclick="location.href='search.html'">걸리쉬</div>
+        <div id="tutting" class="search_janre" onclick="location.href='search.html'">텃팅</div>
     </form>
     <div id="last">일단 모르겠고 약관임</div>
 
