Design: landing page

--- a/index/landing.html
+++ b/index/landing.html
@@ -9,10 +9,12 @@
 
 <body>
     <div id="title">
-        <div onclick="location.href='landing.html'">D.A.P</div>
+        <div id="main_title" onclick="location.href='landing.html'">D.A.P</div>
     </div>
-    <div id="address">
-        <input placeholder="입력 주소" style="width:380px;height:50px;font-size:30px;">
+    <div id="search_group">
+        <div id="address_search">
+            <input id="input_search" placeholder="입력 주소">
+        </div>
     </div>
     <form id="landing_search">
         <div id="landing_form">
