--- a/index/search.html
+++ b/index/search.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="title">
-        <div onclick="location.href='landing.html'">D.A.P</div>
+        <div id="main_title" onclick="location.href='landing.html'">D.A.P</div>
     </div>
     <div id="address">
         <input placeholder="입력 주소">
